2000-02-16  Jim Meyering  <meyering@lucent.com>

	* update.c (join_file): Correct typo in diagnostic:
	change `file %s is present...' to `file %s is not present...'.

2000-02-10  Larry Jones  <larry.jones@sdrc.com>

	* parseinfo.c (Parse_Info): Treat matching lines with bad expansions
	as errors rather than just ignoring.

2000-02-10  Larry Jones  <larry.jones@sdrc.com>

	* edit.c (edit): Check for invalid characters in hostname and CurDir.
	(Reported by "Andrew S. Townley" <atownley@informix.com>.)
	* sanity.sh (devcom2): New tests for above.

2000-02-10  Larry Jones  <larry.jones@sdrc.com>

	* cvs.h: Always #include "server.h" to prevent compile errors when
	neither CLIENT_SUPPORT nor SERVER_SUPPORT is defined.
	(Reported by "Crow, Ian" <ian.crow@linklaters.com>.)
	* log.c (send_one, send_arg_list): Only define when CLIENT_SUPPORT
	is defined to prevent link errors.

	* server.c (server): Always create a new temporary directory, don't
	try to reuse an existing one since we might not have correct
	permissions.  Also, include directory name in error messages.

2000-01-29  Jim Kingdon  <http://developer.redhat.com/>

	* ignore.c (ignore_files): Correctly set errno to 0 when we go
	back to the top of the loop.  Fixes spurious errors like "cvs
	update: error reading current directory: No such file or
	directory".

2000-01-26  Larry Jones  <larry.jones@sdrc.com>

	* run.c (run_exec): Conditionalize K.J.'s change so that it only
	applies when SETXID_SUPPORT is defined since some platforms don't
	have setegid().

2000-01-26  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh: Make TESTDIR earlier then use it to check for versions
	of expr that don't work right with long expressions.

	* sanity.sh (dotest_line_by_line): Have wc read from stdin so it
	doesn't output the file name and confuse expr.  Make the output a
	bit less verbose and easier to read.

2000-01-24  K.J. Paradise <kj@sourcegear.com>

	* run.c :> prevents a user from creating a privileged shell from the